@@ -42,6 +42,7 @@ class pkgQuery_T : public std::map<util::string, util::string>
     public:
         pkgQuery_T(const util::string &n, const util::string &w = "",
             bool dev = false) : info(n), query(n), with(w),
+                                portdir(optget("portdir", util::string)),
                                 type(dev? QUERYTYPE_DEV : QUERYTYPE_HERD) { }
 
         void dump(std::ostream &) const;
@@ -49,7 +50,7 @@ class pkgQuery_T : public std::map<util::string, util::string>
         std::vector<util::string> pkgs() const;
 
         herds_xml_T::devinfo_T info;
-        util::string query, with;
+        util::string query, with, portdir;
         std::time_t date;
         query_type type;
 };
